x-designable: make del key works

--- a/x-designable.html
+++ b/x-designable.html
@@ -145,7 +145,7 @@ license that can be found in the LICENSE file.
             break;
           case 8:
           case 46:
-            if (!nodeIsEditor(event.target)) {
+            if (!this.nodeIsEditor(event.target)) {
               this.deleteElement();
               event.preventDefault();
             }
