--- a/x-designable.html
+++ b/x-designable.html
@@ -8,13 +8,11 @@ license that can be found in the LICENSE file.
 <polymer-element name="x-designable" designer attributes="selected" on-keydown="{{keydown}}" on-pointerup="{{pointerUp}}" on-trackstart="{{trackStart}}" on-track="{{track}}" on-trackend="{{trackEnd}}">
   <template>
     <style>
-      @host {
-        * {
-          position: relative;
-          outline: none;
-          background-image: url(grid.png);
-          -webkit-user-select: none
-        }
+      :host {
+        position: relative;
+        outline: none;
+        background-image: url(grid.png);
+        -webkit-user-select: none
       }
     </style>
     <content></content>
