--- a/x-designable.html
+++ b/x-designable.html
@@ -5,7 +5,7 @@ license that can be found in the LICENSE file.
 -->
 <link rel="import" href="../polymer/polymer.html">
 
-<polymer-element name="x-designable" designer attributes="selected" on-keydown="{{keydown}}" on-pointerup="{{pointerUp}}" on-trackstart="{{trackStart}}" on-track="{{track}}" on-trackend="{{trackEnd}}">
+<polymer-element name="x-designable" designer attributes="selected" on-keydown="{{keydown}}" on-pointerdown="{{pointerDown}}" on-pointerup="{{pointerUp}}" on-trackstart="{{trackStart}}" on-track="{{track}}" on-trackend="{{trackEnd}}">
   <template>
     <style>
       :host {
@@ -175,6 +175,9 @@ license that can be found in the LICENSE file.
             break;
         }
       },
+      pointerDown: function(e) {
+        //this.dragDisabled = e.altKey;
+      },
       pointerUp: function(e) {
         if (this.dragInfo && !this.dragInfo.dropped) {
           this.dragInfo.dropped = this.drop(this.dragInfo.element, e);
@@ -190,6 +193,9 @@ license that can be found in the LICENSE file.
         event.stopPropagation();
         //console.dir(event);
         // acquire target
+        if (this.dragDisabled) {
+          return;
+        }
         var elt = this.findDraggableElement(event.target);
         if (elt) {
           var dragInfo = this.createDragObject(elt);
