--- a/x-designable.html
+++ b/x-designable.html
@@ -44,7 +44,7 @@ license that can be found in the LICENSE file.
       // commands
       deleteElement: function() {
         var e = this.selected;
-        if (e) {
+        if (e && e !== this) {
           //if (e === this.$.designElement) {
           //  this.clearElement();
           //} else {
@@ -321,7 +321,7 @@ license that can be found in the LICENSE file.
         }
       },
       nodeIsEditor: function(node) {
-        return node.isEditor || this.editorElements[node.localName];
+        return (node.meta && node.meta.isEditor) || this.editorElements[node.localName];
       },
       editorElements: {input: 1, select: 1, textarea: 1},
       loadHtml: function(html) {
